# interpreted_language

./: .gitignore  CMakeLists.txt  README.md  example_code.pkl  example_code.txt  example_py_module.py  example_singleton.py  py_tester.py
compiler_parser/src/: main.cpp
go/: main  main.go  prog.py  simple_stdin_stdout_repeater.py  singleton_json_multiplier.py
pk-lang/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
pk-lang/syntaxes/: pkl.tmLanguage.json
py_workspace/: main.py
py_workspace/workspace/: __init__.py  dataworkspace.py
python_testing/: __init__.py  zementis_interface.py
runtime_server/: CMakeLists.txt
runtime_server/src/: main.cpp
runtime_server/src/file_system_utils/: file_system_utils.cpp  file_system_utils.hpp
runtime_server/src/file_system_utils/module_handle/: module_handle.cpp  module_handle.hpp
runtime_server/src/io_types/: io_types.hpp
runtime_server/src/module_handle/: create_process_module.cpp  module_handle.cpp  module_handle.hpp
runtime_server/src/module_handle/process_handle/: process_handle.cpp  process_handle.hpp
runtime_server/src/subproc_config/: create_python3_subproc_config.cpp  subproc_config.cpp  subproc_config.hpp
src/: main.cpp  tokens.cpp  tokens.hpp
src/compiler/: compiler.cpp  compiler.hpp
src/compiler_parser/: main.cpp  tokens.hpp
src/il_interpreter/: il_interpreter.cpp  il_interpreter.hpp
src/il_machine/: il_machine.cpp  il_machine.hpp  il_runtime_exception.hpp
src/il_runtime/: il_runtime.cpp  il_runtime.hpp
zementis_interface/: __init__.py  zementis_interface.py
(+187 files in other folders)
